@@ -60,9 +60,7 @@ module Kernel
     #--
     # TODO request access to the C implementation of this to speed up RubyGems
 
-    spec = Gem::Specification.stubs.find { |s|
-      s.activated? and s.contains_requirable_file? path
-    }
+    spec = Gem::Specification.find_active_stub_by_path path
 
     begin
       RUBYGEMS_ACTIVATION_MONITOR.exit
